# itasc_core

./: CMakeLists.txt  Makefile  README  iTaSC.doxyfile  manifest.xml  stack.xml
scripts/: application_fsm.lua  application_supervisor.lua  composite_task_fsm.lua  event_firer.lua  itasc_configuration.lua  itasc_fsm.lua  itasc_supervisor.lua  reduced_application_fsm.lua  reduced_application_supervisor.lua  reduced_composite_task_fsm.lua  reduced_event_firer.lua  reduced_itasc_fsm.lua  reduced_itasc_supervisor.lua  run.ops  run.sh  running_itasc_coordination.lua
src/: ConstraintController.hpp  ConstraintControllerEquality.hpp  ConstraintControllerInequality.hpp  Scene.cpp  Scene.hpp  Solver.hpp  SubRobot.hpp  VirtualKinematicChain.hpp  choleski_semidefinite.cpp  choleski_semidefinite.hpp  eigen_toolkit.hpp
